# libcyberiadamlpp-py

./: CMakeLists.txt  README.md  cyberiadamlpp-py.cpp  run-tests.sh
tests/: 00-basic.py  00-output.txt  01-empty-doc-except.py  02-empty-doc-valid.py  02-output.graphml  03-empty-doc-meta.py  03-output.graphml  04-output.txt  04-read-meta.py  04-read-meta.py-input.graphml  04-read-meta.py-input2.graphml  04-read-meta.test.txt  05-change-doc-name.py  05-change-doc-name.py-input.graphml  05-output.txt  06-output.graphml  06-output.txt  06-two-statemachines.py  07-output.graphml  07-output.txt  07-single-state.py  08-output.graphml  08-output.txt  08-state-hierarchy.py  09-initial.py  09-output.graphml  09-output.txt  10-final.py  10-output.graphml  10-output.txt  11-choice.py  11-output.graphml  11-output.txt  12-output.graphml  12-output.txt  12-state-actions.py  13-output.graphml  13-output.txt  13-transitions.py  14-comments.py  (+52 more)
